--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
 
     </div>
-    <!-- <section class="animation">
+    <section class="animation">
       <div class="bubbles">
         <span style="--i:12"></span>
         <span style="--i:13"></span>
@@ -88,7 +88,7 @@
         <span style="--i:26"></span>
         <span style="--i:27"></span>
       </div>
-    </section> -->
+    </section>
 
 
     <header class="header">
