--- a/index.html
+++ b/index.html
@@ -116,11 +116,7 @@
       </div>
       <div class="para">
         <p>
-          good to know I'm finally getting my ass off to actually design a
-          website hope it secures me a good job soon, I can't see my parents
-          struggling all time cause of me, Please god just place me in a
-          company, I would love explore the world and fulfill my parents every
-          wish
+        Hello, I'm Aditya, a passionate individual deeply immersed in the world of web technology. My journey in the realm of web development has allowed me to gain valuable expertise in various programming languages and tools, including HTML, CSS, JavaScript, and Python. I find great joy in crafting beautiful and functional websites that leave a positive impact on users.
         </p>
       </div>
       <div class="btn">
